# chatty-parrot

./: .gitignore  README.md  chatty_perrot.py  env.example  pyproject.toml  requirements.txt
modules/: chat_bot.py  enum.py  processor.py  sales_chat_bot.py  settings.py
